# hepconvert

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  _version.py  dest.root  file.root  hist1.root  hist2.root  new.root  new_dest.root  noxfile.py  pyproject.toml  requirements.txt  root_parquet.root  test.parquet  test.py  test.root  test1.parquet  test1.root  uproot-HZZ.parquet  uproot-HZZ.root  uproot-hepdata-example.parquet  uproot-hepdata-example.root
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  index.md
docs/source/: add.rst  add_histograms.rst  cli.toctree  conf.py  copy_root.rst  examples.rst  general_guide.rst  guide.toctree  hepconvert.add_histograms.rst  hepconvert.copy_root.copy_root.rst  hepconvert.copy_root.rst  hepconvert.copy_root.toctree  hepconvert.histogram_adding.add_histograms.rst  hepconvert.histogram_adding.hadd.rst  hepconvert.histogram_adding.toctree  hepconvert.merge.hadd_and_merge.rst  hepconvert.merge.merge_root.rst  hepconvert.merge.toctree  hepconvert.merge_root.rst  hepconvert.parquet_to_root.parquet_to_root.rst  hepconvert.parquet_to_root.rst  hepconvert.parquet_to_root.toctree  hepconvert.root_to_parquet.root_to_parquet.rst  hepconvert.root_to_parquet.rst  hepconvert.root_to_parquet.toctree  hepconvert.toctree  index.rst  intro.rst  main.toctree  merge_root.rst  modules.rst  noxfile.rst  odapt.copy_root.copy_root.rst  odapt.copy_root.toctree  odapt.histogram_adding.hadd.rst  odapt.histogram_adding.toctree  odapt.merge.hadd_and_merge.rst  odapt.merge.toctree  odapt.operations.rst  odapt.parquet.parquet_to_root.rst  (+25 more)
src/hepconvert/: __init__.py  __main__.py  _utils.py  copy_root.py  histogram_adding.py  merge.py  parquet_to_root.py  root_to_parquet.py  test.py
src/odapt/: __init__.py  __main__.py  _version.py  _version.pyi  cli.py  copy_root.py  hdf5_to_root.py  histogram_adding.py  merge.py  parquet_to_parquet.py  parquet_to_root.py  root_to_hdf5.py  root_to_parquet.py  version.py
src/odapt/operations/: __init__.py  copy_root.py  hadd.py  hdf5_to_root.py  merge.py  parquet_to_root.py  root_to_hdf5.py
src/odapt/parquet/: __init__.py  parquet_to_root.py  to_root.py
src/odapt/root/: __init__.py  copy.py  histogram_adding.py  merge.py
src/proteus/: __init__.py  to_feather.py  to_parquet.py
src/proteus/operations/: __init__.py  add_histograms.py  hadd_like.py  parquet_to_root.py
tests/: _test_utils.py  generate_hists_root.py  test_add_histograms.py  test_cli.py  test_copy_root.py  test_hadd.py  test_merge.py  test_merge_parquet.py  test_package.py  test_parquet_to_root.py  test_root_to_parquet.py  test_skim.py  test_ttree_merge.py
tests/samples/: copy.root  destination.root  file1.root  file1dim2.root  file2.root  file2dim2.root  file3.root  file3dim2.root  hist1.root  hist2.root  hist3.root  mytestfile.hdf5  parquet_HZZ.parquet  parquet_HZZ.root  parquet_hepdata-example.parquet  parquet_test.parquet  place2.root  uproot-HZZ.parquet  uproot-HZZ.root
tests/samples/test/: gaus1.root  gaus2.root  gaus3.root
